# fastapi_cache

./: README.md  docker-compose.yaml
app/: Dockerfile  main.py  pyproject.toml
app/api/: router.py
app/api/dependencies/: redis.py  repositories.py
app/api/routes/: profiles.py
app/core/: config.py
app/db/: sessions.py
app/db/repositories/: profiles.py
app/db/tables/: profiles.py
app/schemas/: profiles.py
