[tool.poetry]
name = "fastapi_base"
version = "0.1.0"
description = ""
authors = ["Arturo Cuicas"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
sqlmodel = "^0.0.8"
sqlalchemy = "^1.4.41"
Faker = "^18.6.0"
psycopg2-binary = "^2.9.6"
redis = "^4.5.4"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
